:lipstick: fix button color for warning banner on iOS

--- a/packages/css/src/warning-banner/warning-banner.css
+++ b/packages/css/src/warning-banner/warning-banner.css
@@ -37,6 +37,7 @@
       border: 0;
       padding: 0;
       background-color: transparent;
+      color: inherit;
 
       &::after {
         content: "";
